--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/pong.loader.js";
       var config = {
-        dataUrl: buildUrl + "/pong.data.br",
-        frameworkUrl: buildUrl + "/pong.framework.js.br",
-        codeUrl: buildUrl + "/pong.wasm.br",
+        dataUrl: buildUrl + "/pong.data",
+        frameworkUrl: buildUrl + "/pong.framework.js",
+        codeUrl: buildUrl + "/pong.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Rocha",
         productName: "RochaPong",
