--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/pong.loader.js";
+      var loaderUrl = buildUrl + "/Pong2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/pong.data",
-        frameworkUrl: buildUrl + "/pong.framework.js",
-        codeUrl: buildUrl + "/pong.wasm",
+        dataUrl: buildUrl + "/Pong2.data",
+        frameworkUrl: buildUrl + "/Pong2.framework.js",
+        codeUrl: buildUrl + "/Pong2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Rocha",
         productName: "RochaPong",
@@ -95,8 +95,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1104px";
-        canvas.style.height = "621px";
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
       }
 
       loadingBar.style.display = "block";
