--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
         <div id="unity-build-title">RochaPong</div>
       </div>
     </div>
-    <img src="https://images.unsplash.com/photo-1553095066-5014bc7b7f2d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2FsbCUyMGJhY2tncm91bmR8ZW58MHx8MHx8&w=1000&q=80" alt="Girl in a jacket" width="500" height="600">
+    
+   <img src="https://ik.imagekit.io/ikmedia/backlit.jpg" 
+	 style="object-fit:scale-down;
+            width:200px;
+            height:300px;
+            border: solid 1px #CCC"/>
+    
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
