--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     
    <img src="https://ik.imagekit.io/ikmedia/backlit.jpg" 
 	 style="object-fit:scale-down;
-            width:200px;
-            height:300px;
+            width:100%;
+            height:100%;
             border: solid 1px #CCC"/>
     
     <script>
