--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
         <div id="unity-build-title">RochaPong</div>
       </div>
     </div>
-    
-   <img src="https://ik.imagekit.io/ikmedia/backlit.jpg" 
-	 style="object-fit:scale-down;
-            width:100%;
-            height:100%;
-            border: solid 1px #CCC"/>
+    body {
+	background-image: url("https://ik.imagekit.io/ikmedia/backlit.jpg");
+	}
+   
     
     <script>
       var container = document.querySelector("#unity-container");
