--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Hyper Pong</title>
+    <title>Made by Rocha | Hyper Pong</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -95,8 +95,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = window.innerWidth;
-        canvas.style.height = window.innerHeigh;
+        canvas.style.width = "1104px";
+        canvas.style.height = "621px";
       }
 
       loadingBar.style.display = "block";
