--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1104px";
-        canvas.style.height = "621px";
+        canvas.style.width = window.outerWidth;
+        canvas.style.height =  window.outerHeight;
       }
 
       loadingBar.style.display = "block";
